  * raw AAC fixes and support for 5.1 AAC streams
  * AVI demuxer OpenDML (AVI2.0) support
  * fix unscaled OSD for Kaffeine
  * Sierra VMD file demuxer
  * new ffmpeg decoders activated:
    * Sierra VMD audio and video
    * Duck TrueMotion v1 (DUCK)
    * Planar RGB (8BPS)
    * Lossless Codecs (MSZH & ZLIB)
    * ASV v1/v2
    * ATI VCR1
    * Real Video 2.0
    * Sierra VMD
  * new MOD demuxer
  * new, safer method for on-the-fly rewiring of post plugins
  * add iso-8859-9 and iso-8859-15 codepages into xine fonts
  * work around freezing with arts on BSD
  * documentation about xine fonts
  * make the protocol in MMS configurable - TCP, HTTP or autoprobe
  * added video output plugin for Sun PGX32 framebuffers
  * new video out plugin using CACA - Colored ASCII Art
  * fix a crash when using the gnome-vfs plugin with newer gnome-vfs versions
  * new "file" (wave) audio out plugin
    example: XINE_WAVE_OUTPUT=/tmp/file.wav xine -A file music.mp3
  * autoscan devices /dev/dsp* and /dev/sound/dsp* in OSS audio plugin
  * fix jittering problem with the xshm output plugin
  * fix a playback problem with some mp3 with id3v2 tags
  * asf demuxer fixes

xine-lib (1-rc3a)
  * new subtitle formats: jacobsub, subviewer 2.0, subrip 0.9
  * auto hiding of the subtitles
  * raw AAC file demuxer
  * fix starvation problem with kernel 2.6 NPTL
  * not overwrite the files by saving plugin
  * deinterlace fixes (detect mpeg1 as progressive and correct handling
    of top_field_first)
  * ogg/ogm demuxer fixes for big endian machines
  * update win32 port, working ffmpeg decode plugin
  * fixed segfault when running in verbose mode
	
xine-lib (1-rc3)
  * fix dvd menu blending when using tvtime plugin (yuy2 blend)
  * fix problems with some more elaborate post plugin setups
  * discontinuity problems in audio only streams fixed
  * fix a bug in the id3v2.2 parsing code
  * fix best streams choice in mmsh
  * updated internal copy of ffmpeg with a lot of warning fixes